# game-of-life

./: README.md  buildwasm  init  package-lock.json  package.json  webpack.config.js
src/: host.js
src/css/: style.css
src/js/: bootstrap.js  index.js
src/js/src/: fps.js
src/rs/: .gitignore  Cargo.toml
src/rs/src/: cell.rs  lib.rs  timer.rs  utils.rs
src/static/: index.html  style.css
src/templates/: index.html
